--- a/style.css
+++ b/style.css
@@ -1,13 +1,3 @@
-html body {
-  background: url("bg.jpg");
-
-  background-position: center;
-  background-attachment: fixed;
-  background-size: cover;
-  backdrop-filter: blur(10px);
-  width: 100%;
-}
-
 h1 {
   font-size: 10mm;
   color: red;
@@ -49,7 +39,6 @@ z-index: 1;
   font-weight: 500;
   letter-spacing: 1px;
   color: rgb(16, 227, 235);
-  //font-family: Constantia;
 }
 
 .menu li a:hover{
@@ -104,7 +93,7 @@ margin-bottom: 40px;
 
 .content p{
  font-size: 5mm;
- color: rgba(233, 119, 13, 0.842);
+ color: rgba(184, 101, 24, 0.842);
  text-align: left;
  margin:20mm;
  margin-top: 10px;
@@ -147,6 +136,44 @@ letter-spacing: 100px;
   transition: 0.5s;
 }
 
-.footer{
-  margin-top: 5px;
+*#click {
+  font-size: larger;
+  border-radius: 0.5cm;
+  border-style: groove;
+  transform: translate(-50%, -50%);
+  cursor: pointer;
+}
+
+.theme-light {
+  background-image: url(dkbg.jpg);
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+}
+
+.theme-dark{
+  background-image: url(bg.jpg);
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+}
+
+.container{
+  display: flex;
+  width: 100%;
+  height: 100%;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.container button{
+  color: palevioletred;
+  background: rgb(186, 224, 115);
+  padding: 10px 20px;
+  border: 1;
+  border-radius: 5px;
+  font-size: larger;
+  font-style: oblique;
+  border-style: groove;
 }
